# FidelityFX-LPM

./: .gitignore  .gitlab-ci.yml  NOTICES.txt  readme.md
ffx-lpm/: ffx_a.h
sample/: CMakeLists.txt
sample/media/Campfire/: Campfire_scene_groundscaled.gltf
sample/media/Wood/: Wood_baseColor_License.txt
sample/src/Common/: CMakeLists.txt  LPMSample.json
sample/src/DX12/: CMakeLists.txt  ExposureMultiplierCS.cpp  ExposureMultiplierCS.h  FlipBookAnimation.cpp  FlipBookAnimation.h  LPMPS.cpp  LPMPS.h  LPMSample.cpp  LPMSample.h  Renderer.cpp  Renderer.h  SampleRenderer.cpp  SampleRenderer.h  TestImages.cpp  TestImages.h  UI.cpp  UI.h  stdafx.cpp  stdafx.h
sample/src/DX12/shaders/: ExposureMultiplierCS.hlsl  FlipBookAnimationPS.hlsl  FlipBookAnimationVS.hlsl  LPMPS.hlsl  TestImagesPS.hlsl
sample/src/VK/: CMakeLists.txt  ExposureMultiplierCS.cpp  ExposureMultiplierCS.h  FlipBookAnimation.cpp  FlipBookAnimation.h  LPMPS.cpp  LPMPS.h  LPMSample.cpp  LPMSample.h  Renderer.cpp  Renderer.h  SampleRenderer.cpp  SampleRenderer.h  TestImages.cpp  TestImages.h  UI.cpp  UI.h  stdafx.cpp  stdafx.h
sample/src/VK/shaders/: ExposureMultiplierCS.glsl  FlipBookAnimationPS.glsl  FlipBookAnimationVS.glsl  LPMPS.glsl  TestImagesPS.glsl  transferFunction.h
